(https://github.com/clj-commons/pomegranate/issues/134[#134])
(https://github.com/lread[@lread])
* Don't accept empty but truthy `:repositories`
(https://github.com/clj-commons/pomegranate/pull/133[#133])
(https://github.com/vemv[@vemv])
* General quality
** Review and update docs and docstrings.
(https://github.com/clj-commons/pomegranate/issues/149[#149])
(https://github.com/lread[@lread])
** Update automated testing to cover Linux, Windows, current JDKs, and Clojure v1.4+
(https://github.com/clj-commons/pomegranate/issues/137[#137])
(https://github.com/lread[@lread])
** Add automated check for vulnerabilities in dependencies
(https://github.com/clj-commons/pomegranate/pull/135[#135])
(https://github.com/lread[@lread])
** Address all reflection warnings
(https://github.com/clj-commons/pomegranate/pull/131[#131])
(https://github.com/vemv[@vemv])
** Add automated clj-kondo linting
(https://github.com/clj-commons/pomegranate/pull/139[#139])
(https://github.com/lread[@lread])
** Add automated release workflow
(https://github.com/clj-commons/pomegranate/pull/138[#138])
(https://github.com/lread[@lread])
** Dependencies now specified only once
(https://github.com/clj-commons/pomegranate/pull/136[#136])
(https://github.com/lread[@lread])

== v1.2.1 - 2021-04-12

* Upgrade wagon libs from 3.2.2 \-> 3.3.4

== v1.2.0 - 2020-01-10

* Bump deps
* Add `deps.edn`
(https://github.com/slipset[@slipset])
* Configure session to download signature checksums by default
(https://github.com/clj-commons/pomegranate/issues/113[#113])
(https://github.com/glts[@glts])
* Prep for first release from clj-commons
(https://github.com/slipset[@slipset])
** Change deploy coordinates from cemerick to clj-commons
** Change deploy destination from Maven Central to Clojars
** Switch from Travis CI to CircleCI for tests

== v1.1.1 - 2020-01-10

* Bad release, replaced by v1.2.0

== https://github.com/cemerick/pomegranate/milestone/9?closed=1[v1.1.0] - 2018-10-02
