@@ -38,7 +38,13 @@
                   :extra-deps {io.github.cognitect-labs/test-runner {:git/tag "v0.5.1" :git/sha "dfb30dd"}
                                org.slf4j/slf4j-simple {:mvn/version "2.0.6"}}
                   :main-opts ["-m" "cognitect.test-runner" "-d" "src/test/clojure"]}
-           ;; compatible with Clojure < 1.8, example usage: clojure -M:1.4:test:old-runner
+           ;; some tests affect classloaders and classpaths, we run them separately to not pollute jvm state
+           ;; ex usage: clojure -M:1.10:test:isolated
+           :isolated {:extra-paths ["src/test-isolated/clojure"]
+                      ;; override :test :main-opts
+                      :main-opts ["-m" "cognitect.test-runner" "-d" "src/test-isolated/clojure"]}
+           ;; user older runner for compatibility with Clojure < 1.8,
+           ;; example usage: clojure -M:1.4:test:old-runner
            :old-runner {:override-deps {io.github.cognitect-labs/test-runner
                                         ^:antq/exclude
                                         {:git/sha "209b64504cb3bd3b99ecfec7937b358a879f55c1"}}}
