@@ -22,6 +22,7 @@ A release with known breaking changes is marked with:
 * General quality
 ** Review and update docs and docstrings.
 (https://github.com/clj-commons/pomegranate/issues/149[#149])
+(https://github.com/clj-commons/pomegranate/issues/153[#153])
 (https://github.com/lread[@lread])
 ** Update automated testing to cover Linux, Windows, current JDKs, and Clojure v1.4+
 (https://github.com/clj-commons/pomegranate/issues/137[#137])
@@ -40,6 +41,9 @@ A release with known breaking changes is marked with:
 (https://github.com/lread[@lread])
 ** Dependencies now specified only once
 (https://github.com/clj-commons/pomegranate/pull/136[#136])
+(https://github.com/lread[@lread])
+** Review and update classpath related tests
+(https://github.com/clj-commons/pomegranate/pull/154[#154])
 (https://github.com/lread[@lread])
 
 == v1.2.1 - 2021-04-12
